test/corpus/comments.txt
================================================================================
Comments
================================================================================

I am some text!
<%# Look a comment! %>
I am more some text!

--------------------------------------------------------------------------------

(fragment
  (text)
  (comment
    (code))
  (text))

================================================================================
Multi-line Comments
================================================================================

<%# I
    AM
    A
    COMMENT
%>
and some text!

--------------------------------------------------------------------------------

(fragment
  (comment
    (code))
  (text))

================================================================================
Empty Comment
================================================================================

<%# %>

--------------------------------------------------------------------------------

(fragment
  (comment)
  (text))
