test/corpus/text.txt
================================================================================
Plain Text
================================================================================

Hello World!

--------------------------------------------------------------------------------

(fragment
  (newline)
  (text)
  (newline))
